alignment fix

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -16,7 +16,6 @@ body {
 #timeline-limit {
   max-width: 750px;
   padding: 0 5%;
-  padding-left: 20%;
   margin:auto;
 }
 /* -------------------------------------
